cleaned up spring extensions