@@ -1,19 +1,16 @@
 package codes.thischwa.ddauto;
 
+import org.junit.jupiter.api.Test;
+
+import java.util.ArrayList;
+import java.util.List;
+
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-
-import org.junit.jupiter.api.Test;
-
 class CommandlineArgsProcessorTest {
 
-	final List<String> testArgs = Collections
-			.unmodifiableList(Arrays.asList("--swagger.enabled=true"));
+	final List<String> testArgs = List.of("--swagger.enabled=true");
 
 	@Test
 	final void testProcess_swagger() {
